fix: inline code overflow (#64)

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -174,6 +174,8 @@ hr {
       font-size: 13px;
       border-radius: 4px;
       display: inline-block;
+      word-break: break-all;
+      overflow-wrap: anywhere;
     }
   }
 
